pkg/machines/machines.less
@import (less) "../lib/page.css";
@import "../lib/listing.less";
@import "../lib/cards.less";
@import (less) "../lib/table.css";

@import (less) "../../node_modules/c3/c3.css";

// For patternfly-react and @patternfly/react-console
@import "~xterm/dist/xterm.css";
@import "~bootstrap/less/variables";
@import "~patternfly/dist/less/variables";
@import "~patternfly-react/dist/less/patternfly-react.less";
@import "~@patternfly/react-console/dist/less/console.less";

.icon-2x-vms {
    font-size: 2em;
}
.icon-3x-vms {
    font-size: 3em;
}

.machines-width-max {
    width: 100%;
}

.usage-donut-caption {
    text-align: center;
    width: 200px;
}

.machines-disks-total {
    float: right;
    white-space: nowrap;
}

.machines-disks-source-descr {
    color: #888888;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

.machines-disks-source-value {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

.machines-disks-alias {
    white-space: nowrap;
}

.machines-disks-total-value {
    font-weight: bold;
}

.machines-listing-detail-top-column {
    vertical-align: top;
}

.machines-console-frame {
    height: 1px; /* keep at minimum, down-sizing does not work */
    margin-top: 1em;
}

.machines-console-frame-vnc {
    width: 100%;
    height: 100%;
    margin-top: -2em;
}

.left-delimiter {
    padding: 0 13px 0;
}

.left-delimiter + .left-delimiter {
    border-left: 1px solid #d1d1d1;
    padding-left: 15px;
}

.top-right-menu {
    float: right;
    padding-bottom: 5px;
    position: absolute;
    right: 5em;
}

.blue {
    color: #4babdc;
}

.machines-desktop-main {
    width: 100%;
}

.machines-desktop-main-col {
    width: 50%;
    text-align: center;
    vertical-align: top;
}

.machines-desktop-manual-block {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
}

.machines-desktop-viewer-block {
    margin-top: 3em;
    margin-bottom: 2.5em;
}

.machines-desktop-manual-con-details {
    display: inline-block;
    text-align: left;
}

.machines-desktop-shell-command {
    color: #888;
}

.machines-desktop-more-info-container {
    display: inline-block;
    max-width: 40em;
}

.machines-desktop-more-info-text {
    margin-left: auto;
    margin-right: auto;
    text-align: left;
}

.machines-desktop-install-instructs {
    display: inline-block;
    padding: 0;
    margin: 0 2em 10px;
}

.machines-desktop-install-instructs-item {
    text-align: left;
}

.machines-desktop-install-instructs-row {
    display: inline-flex;
}

.machines-network-source-descr {
    color: #888888;
    text-align: right;
    padding: 5px 10px 5px 10px !important;
}

.machines-network-source-value {
    padding: 5px 10px 5px 10px !important;
    text-align: left !important;
}

.machines-network-up {
    color: green;
}

.machines-network-down {
    color: red;
}

.machines-network-additional-column {
    padding-left: 0;
}

.machines-network-source-link {
    cursor: pointer;
    text-decoration: underline;
    color: #00659c;
}

.machines-network-state-text {
    margin-right: 5px;
}

.machines-network-actions {
    width: 100px;
    display: inline-flex;
    justify-content: space-between;
}

.machines-network-list {
    max-height: 500px;
    overflow: auto;
    padding-bottom: 15px;
}

.panel-heading .btn {
    margin-left: 3px;
}

.console-menu {
    padding-bottom: 1em;
}

.console-actions-buttons {
    margin-left: 5px;
}

.console-actions {
    float: right;
    position: relative;
    top: -2em;
}

.console-type-select {
    width: 19em !important;
}

.machines-status-alert {
    padding-right: 5px;
}

.vcpu-detail-modal-table {
    width: 100%;
}

.vcpu-detail-modal-table td {
    width: 50%;
}

.vcpu-detail-modal-table tr td:first-child {
    padding-top: 0.25em;
    display: inherit;
}

table.vcpu-detail-modal-right td {
    width: 25%;
}

table.vcpu-detail-modal-right input {
    height: 25px;
}

table.vcpu-detail-modal-right .btn-group.bootstrap-select.dropdown {
    width: 110px;
}

.vcpu-detail-modal-table tr td.machines-vcpu-caution:first-child {
    width: 100%;
    display: table-cell;
}

#machines-vcpu-modal-dialog div.modal-body {
    overflow: visible;
}

#create-vm-dialog .spinner {
    display: inline-block;
}

/* FIXME: This CSS should be moved upstream */
.form-text {
    /* Set size similar to a widget; like control-label, but no alignment */
    display: inline-block;
    padding-top: 3px;
    margin-bottom: 0;
}

.modal-body + .modal-footer {
    /* Remove unneeded margin when there's a modal body and footer */
    margin-top: 0;
}

/* Machines Modal footer custom CSS */
.modal-footer .idle-message {
    align-items: center;
    display: flex;
    float: left;
    line-height: 24px; /* Same height as a button */
}

.pficon-pending {
    color: #ec7a08; /* pf-orange-400 */
    font-size: 16px;
}

.modal-footer .pficon-pending {
    line-height: inherit;
    margin-right: 0.5rem;
}

.col-no-padding {
    padding-left: 0px !important;
}

.storage-pool-listing-breadcrumb {
    padding-left: 20px !important;
}

td > .utilization-bar-pf {
    width: 100%;
    min-width: 4em;

    > .progress {
        margin-bottom: 0;
        height: 0.75rem;
    }
}

